--- a/MBD_SVLongerQuests.csproj
+++ b/MBD_SVLongerQuests.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
